@@ -61,6 +61,7 @@
         "lib-openssl": "*",
         "lib-libxml": "*",
         "magnafacta/mutil": "dev-master",
+        "mlocati/ip-lib": "1.*",
         "box/spout": "^2.7.1",
         "zendframework/zend-authentication": "^2.5",
         "zendframework/zend-db": "^2.8"
