@@ -23,7 +23,10 @@ salt =
 admin.user = superadmin
 admin.pwd  = PASSWD
 ;admin.ipRanges = 10.0.0.0-10.255.255.255;192.168.0.0-192.168.255.255
-;admin.twoFactor =
+admin.2fa.exclude = 127.0.0.1|::1
+admin.2fa.key =
+; Adjust & open this url for adding to Google Authorizer
+; https://chart.googleapis.com/chart?chs=200x200&chld=M|0&cht=qr&chl=otpauth%3A%2F%2Ftotp%2Fsuper%3Fsecret%3D >admin.2fa.key< %26issuer%3DCarefacts%2B-%2BGemsTracker
 
 databaseFileEncoding = ISO-8859-1
 
